--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Sport registration for football field",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "keywords": [],
@@ -14,7 +13,9 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
-    "nodemon": "^3.1.0",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
